# agsol-borsh-schema

./: .gitignore  Cargo.toml  README.md  makefile
agsol-borsh-schema-derive/src/: lib.rs
src/: lib.rs  utils.rs
src/layout/: borsh_container.rs  borsh_type.rs  field.rs  mod.rs
src/test/: borsh_btree.rs  borsh_enums.rs  borsh_hashmap.rs  borsh_structs.rs  generate_output.rs  mod.rs
test-rs-output-ts-input/: package-lock.json  package.json  test.ts  test_enums.ts  test_map.ts  test_structs.ts
test-rs-output-ts-input/extensions/: publicKey.ts
