[package]
name = "agsol-borsh-schema"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
keywords = ["borsh", "serialization", "web3", "solana"]
description = "Parser that generates TypeScript code for Borsh serialization"
repository = "https://github.com/agoraxyz/agora-solana"

[features]
full = ["anyhow", "heck", "quote", "syn"]

[dependencies]
anyhow = { version = "1.0", optional = true }
heck = { version = "0.3.3", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"], optional = true }
borsh = "0.9.1"

[dev-dependencies]
borsh-derive = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "1.9.0"
