[package]
name = "agsol-borsh-schema"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>", "dj8yf0μl"]
keywords = ["borsh", "serialization", "web3", "solana"]
description = "Parser that generates TypeScript code for Borsh serialization"
repository = "https://github.com/agoraxyz/agora-solana"


[dependencies]
anyhow = { version = "1.0" }
heck = { version = "0.3.3" }
quote = { version = "1.0" }
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
borsh = "0.9.1"

[dev-dependencies]
borsh-derive = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "1.9.0"
itertools = "0.10.5"
